erDiagram
    USERS ||--o{ BIA_ASSESSMENTS : creates
    ASSETS ||--o{ BIA_ASSESSMENTS : analyzed_in
    BIA_ASSESSMENTS ||--o{ BIA_PROCESSES : contains
    BIA_ASSESSMENTS ||--o{ BIA_IMPACTS : has
    
    USERS {
        uuid id PK
        string email
    }
    
    ASSETS {
        uuid id PK
        string name
        string type
    }
    
    BIA_ASSESSMENTS {
        uuid id PK
        uuid user_id FK
        uuid asset_id FK
        string name
        json assessment_data
        float impact_score
        string status
    }
    
    BIA_PROCESSES {
        uuid id PK
        uuid bia_assessment_id FK
        string process_name
        string criticality_level
        int rto_hours
        int rpo_hours
    }
    
    BIA_IMPACTS {
        uuid id PK
        uuid bia_assessment_id FK
        string impact_type
        float impact_score
    }

